force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>Question stores all of the questions stored in the system and defines the type of question (e.g. Date, Text, Y/N) and if the question is related to targets. Question is related to Question Defined Response, Question Variant.</description>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>