force-app/main/default/objects/Question__c/fields/DefinedResponseCount__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseCount__c</fullName>
    <label>Defined Response Count</label>
    <summaryForeignKey>QuestionDefinedResponse__c.Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>