force-app/main/default/objects/Question__c/fields/ExceptionQuestion__c.field-meta.xml
<CustomField>
    <fullName>ExceptionQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExceptionQuestion</label>
    <type>Checkbox</type>
</CustomField>