force-app/main/default/objects/Question__c/fields/IsQuestionVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>IsQuestionVisibleToClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Question Visible To Client</label>
    <type>Checkbox</type>
</CustomField>