force-app/main/default/objects/Question__c/fields/ItemQuestion__c.field-meta.xml
<CustomField>
    <fullName>ItemQuestion__c</fullName>
    <formula>AND(TEXT(TargetType__c) != null, TEXT(TargetType__c) != &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Question</label>
    <type>Checkbox</type>
</CustomField>