force-app/main/default/objects/Question__c/fields/OneHubQuestionId__c.field-meta.xml
<CustomField>
    <fullName>OneHubQuestionId__c</fullName>
    <externalId>true</externalId>
    <label>One Hub Question Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>