force-app/main/default/objects/Question__c/fields/QuestionHint__c.field-meta.xml
<CustomField>
    <fullName>QuestionHint__c</fullName>
    <description>Question Hint</description>
    <label>Question Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>