force-app/main/default/objects/Question__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Multi-Select List</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Single-Select List</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Yes/No</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Barcode</fullName>
            </value>
            <value>
                <fullName>Multi Select Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>