force-app/main/default/objects/Question__c/fields/ReplaceByOneHubQuestionId__c.field-meta.xml
<CustomField>
    <fullName>ReplaceByOneHubQuestionId__c</fullName>
    <label>Replace By One Hub Question ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>