force-app/main/default/objects/Question__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>